@@ -36,6 +36,9 @@ Define the number of channels in the file.
 .B \-d [device], \-\-device=[device]
 Specify a different device to play the sound file to.
 .TP
+.B \-\-file
+Next specified option is FILENAME.
+.TP
 .B \-f [format], \-\-format=[format]
 Specify bit format of the sample. One of s, u, U, A, a, or g.
 .TP
@@ -51,6 +54,9 @@ automatically determined.
 .TP
 .B \-v [volume], \-\-volume=[volume]
 Change the audio volume
+.TP
+.B \-V, \-\-verbose
+Print verbose information during processing
 .TP
 .B \-x , \-\-xinu
 Reverse the byte order of the sample (only works with 16 and 32-bit data).
