@@ -219,6 +219,12 @@ file.
 .br
         soxmix music.wav voice.wav mixed.wav
 .PP
+\fBFilenames:\fR
+.PP
+SoX can be used as a part of pipe operations by using the special
+filenames of "-".  If specified as an input name, it will read data
+from stdin.  If specified as an output name, it will send data
+to stdout.
 \fBFormat options:\fR
 .PP
 Format options effect the audio samples that they immediately precede.  If
@@ -954,8 +960,8 @@ removing consistent background noise such as hiss or hum. To use it, first run
 the \fBnoiseprof\fR effect on a section of silence
 (that is, a section which contains
 nothing but noise). The \fBnoiseprof\fR effect will print a noise profile
-to \fIprofile-fire-fR, or to stdout if no \fIprofile-file\fR is specified.
-If there is sound output on stdout then the profile will next be directed to
+to \fIprofile-file\fR, or to stdout if no \fIprofile-file\fR is specified.
+If there is sound output on stdout then the profile will instead be directed to
 stderr.
 
 To actually remove the noise, run SoX again with the \fInoisered\fR filter. The
@@ -1190,7 +1196,7 @@ Removes silence from the beginning or end of a sound file.  Silence is anything 
 .br
 When trimming silence from the beginning of a sound file, you specify a duration of audio that is above a given silence threshold before audio data is processed.  You can also specify the count of periods of none-silence you want to detect before processing audio data.  Specify a period of 0 if you do not want to trim data from the front of the sound file.
 .br
-When optionally trimming silence form the end of a sound file, you specify the duration of audio that must be below a given threshold before stopping to process audio data.  A count of periods that occur below the threshold may also be specified.  If this options are not specified then data is not trimmed from the end of the audio file.  If \fIbelow_periods\fR is negative, it is treated as a positive value and is also used to indicate the effect should restart processing as specified by the \fIabove_periods\fR, making it suitable for removing periods of silence in the middle of a sound file.
+When optionally trimming silence from the end of a sound file, you specify the duration of audio that must be below a given threshold before stopping to process audio data.  A count of periods that occur below the threshold may also be specified.  If this options are not specified then data is not trimmed from the end of the audio file.  If \fIbelow_periods\fR is negative, it is treated as a positive value and is also used to indicate the effect should restart processing as specified by the \fIabove_periods\fR, making it suitable for removing periods of silence in the middle of a sound file.
 .br
 Duration counts may be in the format of time, hh:mm:ss.frac, or in the exact count of samples.
 .br
